--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<ul class="list-group list-group-flush" id='list'></ul>
 		</div>
 
-		<ul class="list-group">
+		<ul class="list-group list-group-flush" id='list'>
 			<li class="list-group-item">Cras justo odio</li>
 			<li class="list-group-item">Dapibus ac facilisis in</li>
 			<li class="list-group-item">Morbi leo risus</li>
