--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
 		</div>
 
 		<ul class="list-group list-group-flush" id='list'>
-			<li class="list-group-item">Cras justo odio</li>
+			<div>
+			<li class="list-group-item">
+				<input type="checkbox" class="form-check-input" id="exampleCheck1">
+				<label class="form-check-label" for="exampleCheck1">Check me out</label>
+				<button type="button" class="btn btn-primary">Primary</button>
+				<button type="button" class="btn btn-danger">Danger</button>
+			</div>
+			</li>
 			<li class="list-group-item">Dapibus ac facilisis in</li>
 			<li class="list-group-item">Morbi leo risus</li>
 			<li class="list-group-item">Porta ac consectetur ac</li>
